--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ GitPython==3.1.7
 isort==4.3.21
 Jinja2==3.1.2
 mosspy==1.0.9
+numpy==2.2.5
 psutil==5.7.2
 pylint==3.0.2
 python-dateutil==2.8.2
@@ -14,5 +15,6 @@ pytz==2020.1
 requests==2.32.3
 setuptools==75.2.0
 shortuuid==1.0.13
+scikit-learn==1.6.1
 urllib3==2.2.3
 websockets==13.1
